--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.2.1",
     "nodemon": "^2.0.22",
+    "popups": "^1.1.3",
     "router": "^1.3.8",
     "shortid": "^2.2.16"
   }
