--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   "homepage": "https://github.com/viharika-Chinthapalli/urlShortener#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^7.2.1",
+    "mongoose": "^7.2.2",
     "nodemon": "^2.0.22",
+    "path": "^0.12.7",
     "popups": "^1.1.3",
     "router": "^1.3.8",
     "shortid": "^2.2.16"
