--- a/package.json
+++ b/package.json
@@ -1,21 +1,12 @@
 {
   "name": "urlshortener",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/viharika-Chinthapalli/urlShortener.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/viharika-Chinthapalli/urlShortener/issues"
-  },
-  "homepage": "https://github.com/viharika-Chinthapalli/urlShortener#readme",
+ 
+ 
   "dependencies": {
     "body-parser": "^1.20.2",
     "dotenv": "^16.1.1",
@@ -27,5 +18,6 @@
     "popups": "^1.1.3",
     "router": "^1.3.8",
     "shortid": "^2.2.16"
-  }
+  },
+  "description": ""
 }
